# AIPPT

./: .dockerignore  .env.example  .gitignore  API_GUIDE.md  DEPENDENCIES.md  Dockerfile  QUICKSTART.md  README.md  check-resources.sh  deploy-linux.sh  dev-run.sh  docker-compose.yml  nginx.conf  pyproject.toml  start.py
config/: llm_config.yaml
docs/: API_GUIDE.md  DEPLOYMENT.md
src/: main.py  models.py
src/api/: __init__.py  dependencies.py  exceptions.py  main.py
src/api/routes/: file_routes.py  ppt_routes.py
src/api/schemas/: __init__.py  common.py  ppt.py
src/llm/: client.py  config.py  manager.py
src/models/: __init__.py  api.py  response.py  search.py
src/ppt/: design_coordinator.py  layout_generator.py  multi_slide_generator.py  page_agent.py  ppt_coordinator.py
src/prompt/: htmlprompt.txt  htmlprompt_en.txt  outline_prompt.txt  ppt_styles.json
src/script/: auto_fix.js  html2pptx.js
src/searcher/: base.py  duckduckgo.py
src/services/: __init__.py  conversion_service.py  file_service.py  html2pptx_service.py  ppt_service.py
src/services/script/: convert.js  html2pptx.js  normalize_html.py
src/storage/: search_storage.py
src/tools/: __init__.py  image_downloader.py  image_searcher.py  web_searcher.py
src/utils/: image_processor.py
tests/: test_layout_generator.py  test_llm_manager.py
